# SYCLBVH

./: CMakeLists.txt  build.sh
adaptor_test/: CMakeLists.txt  minimal.cpp
adaptor_test/common/tasking/: taskschedulerinternal.h
adaptor_test/kernels/: CMakeCache.txt  config.h  config.h.in
adaptor_test/tutorials/common/: device_default.h
adaptor_test/tutorials/common/core/: differential_geometry.h
adaptor_test/tutorials/common/scenegraph/: scenegraph.h
adaptor_test/tutorials/minimal/: minimal.cpp
include/syclbvh/: adaptor.hpp
include/syclbvh/adaptor/: rtcore.h  rtcore_buffer.h  rtcore_common.h  rtcore_device.h  rtcore_geometry.h  rtcore_quaternion.h  rtcore_ray.h  rtcore_scene.h
src/: syclbvh.cpp
